test/should-fail/检查返回值-10.j
function test takes nothing returns integer
    if true then
        if true then
            return 0
        else
            if true then
                return 0
            elseif true then
            else
                return 0
            endif
        endif
    else
        return 0
    endif
endfunction